--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
+    "bootstrap-tagsinput": "^0.7.1",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-14",
@@ -13,6 +14,7 @@
     "laravel-elixir-vue-2": "^0.3.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
+    "typeahead": "^0.2.2",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
   }
