--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,18 @@ PUSHER_SECRET=
 
 ALGOLIA_APP_ID=
 ALGOLIA_SECRET=
+
+ALGOLIA_APP_ID=
+ALGOLIA_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
