--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "guzzlehttp/guzzle": "^6.2",
         "laravel/browser-kit-testing": "^1.0",
         "laravel/framework": "5.4.*",
-        "laravel/scout": "^3.0"
+        "laravel/scout": "^3.0",
+        "laravel/socialite": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
