add notifications web, email, nexmo and slack

--- a/.env.example
+++ b/.env.example
@@ -31,8 +31,8 @@ PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
 
-ALGOLIA_APP_ID=
-ALGOLIA_SECRET=
+NEXMO_KEY=
+NEXMO_SECRET=
 
 ALGOLIA_APP_ID=
 ALGOLIA_SECRET=
@@ -48,3 +48,5 @@ TWITTER_CLIENT_SECRET=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+SLACK_WEBHOOK_URL=
