--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/browser-kit-testing": "^1.0",
         "laravel/framework": "5.4.*",
         "laravel/scout": "^3.0",
-        "laravel/socialite": "^3.0"
+        "laravel/socialite": "^3.0",
+        "pusher/pusher-php-server": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
