--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+BROADCAST_DRIVER=pusher
+CACHE_DRIVER=redis
 SESSION_DRIVER=file
 QUEUE_DRIVER=database
 
