--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "5.4.*",
         "laravel/scout": "^3.0",
         "laravel/socialite": "^3.0",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^2.6"
     },
     "require-dev": {
