--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "algolia/algoliasearch-client-php": "^1.16",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/browser-kit-testing": "^1.0",
+        "laravel/dusk": "^1.0",
         "laravel/framework": "5.4.*",
         "laravel/scout": "^3.0",
         "laravel/socialite": "^3.0",
