--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/browser-kit-testing": "^1.0",
         "laravel/dusk": "^1.0",
         "laravel/framework": "5.4.*",
+        "laravel/passport": "^2.0",
         "laravel/scout": "^3.0",
         "laravel/socialite": "^3.0",
         "predis/predis": "^1.1",
